opam-version: "2.0"
version: "2.1.1"
synopsis: "Parser and printer for the opam file syntax"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
homepage: "https://opam.ocaml.org"
bug-reports: "https://github.com/ocaml/opam-file-format/issues"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
dev-repo: "git+https://github.com/ocaml/opam-file-format"
depends: [
  "ocaml"
  "alcotest" {with-test}
]
depopts: "dune" { > "2.0.0" }
build: [
  [ make
    "byte" {!ocaml-native}
    "all" {ocaml-native} ]
      {!dune:installed | dune:version <= "2.0.0"}
  [ "dune" "build" "-p" name "-j" jobs "@install"
    "@doc" {with-doc} ]
      {dune:installed & dune:version > "2.0.0"}
  [ "dune" "runtest" "-p" name "-j" jobs ]
      {with-test & dune:installed & dune:version > "2.0.0"}
]
install:
  [ make "install" "PREFIX=%{prefix}%" ]
     {!dune:installed | dune:version <= "2.0.0"}
