opam-version: "2.0"
version: "2.2.0~alpha1"
synopsis: "Parser and printer for the opam file syntax"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
authors: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
homepage: "https://opam.ocaml.org"
bug-reports: "https://github.com/ocaml/opam-file-format/issues"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
dev-repo: "git+https://github.com/ocaml/opam-file-format"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.02"}
  "dune" {>= "3.13"}
  "menhir" {>= "20211230"}
  "alcotest" {with-test & >= "0.4.8"}
  "fmt" {with-test}
]
