(copy_files ../../src/opamParserTypes.ml)

(test
  (name opamBaseParser)
  (libraries opam-file-format)
  (modules OpamParserTypes OpamBaseParser)
  (action (run %{test} %{version:opam-file-format})))

(ocamlyacc OpamBaseParser)

(rule
  (with-stdout-to OpamBaseParser.mly
    (progn (cat ../../src/opamBaseParser.mly)
           ; If this assertion fails, OpamBaseParser.version is wrong
           (echo "let () = assert (Scanf.sscanf Sys.argv.(1) \"%u.%u\" (fun x y -> (x, y)) = version)"))))
