(test
  (name opamBaseParserForTest)
  (libraries opam-file-format)
  (modules OpamBaseParserForTest)
  (flags :standard (:include flags.sexp))
  (action (run %{test} %{version:opam-file-format})))

(ocamlyacc OpamBaseParserForTest)

(rule
  (with-stdout-to OpamBaseParserForTest.mly
    (progn (cat ../../src/opamBaseParser.mly)
           ; If this assertion fails, OpamBaseParser.version is wrong
           (echo "let () = assert (Scanf.sscanf Sys.argv.(1) \"%u.%u\" (fun x y -> (x, y)) = version)"))))

(rule
  (with-stdout-to flags.ml
    (echo "print_string (if String.sub Sys.ocaml_version 0 5 = \"4.02.\" then \"(-w -50)\" else \"()\")")))

(rule
  (with-stdout-to flags.sexp
    (run ocaml %{dep:flags.ml})))
